# chesapeake_mhw

./: .gitignore  README.md  pyproject.toml
notebooks/00_download_and_crop/: 00a_generate_satellite_urls.py  00b1_download_from_ipfs.py  00b2_crop_satellite_data.py  00b_download_crop_satellites.py  00c_download_CBPWaterQuality.ipynb
